Fix issue with search results opening when spatial search bbox is dragged or resized. Hide overflow in search alert box.

--- a/src/app/menupanel/search/searchpanel.component.scss
+++ b/src/app/menupanel/search/searchpanel.component.scss
@@ -106,6 +106,7 @@
 
         .search-alert-label {
             display: flex;
+            overflow: hidden;
 
             .search-alert-button {
                 margin-left: auto;
